# AISafety

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  run_full_update.py
.github/instructions/: AISafety.instructions.md
.github/workflows/: deploy.yml
backend/src/website/: demo_plots.py
docs/: action.html  economy.html  index.html  llm.html  privacy.html  references.html  script.js  society.html  style.css  technology.html
local_data/: Economic trends and analysis.docx
src/: __init__.py
src/agents/: crew_agents.py
src/agents/local_data/: LLMs.pptx  economic trends.pptx
src/builders/: __init__.py  icon_generator.py  markdown_processor.py  plot_generator.py  site_builder.py  template_engine.py
src/content/: action.md  economy.md  index.md  llm.md  privacy.md  references.md  society.md  technology.md
src/data/: comparative_wealth.csv  market_trends.csv  personA_portfolio.csv  personB_portfolio.csv  personC_portfolio.csv
src/static/: style.css
src/templates/: base.html  index.html  page.html
tests/: __init__.py  conftest.py  test_markdown_processor.py  test_plot_generator.py
website/: action.html  economy.html  index.html  llm.html  privacy.html  script.js  society.html  style.css  technology.html
