[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-safety-website"
version = "1.0.0"
description = "AI Safety website with automated content management and plot generation"
authors = [
    {name = "AI Safety Team", email = "team@aisafety.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5.0",
    "jinja2>=3.1.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/MLVisions/AISafety"
Repository = "https://github.com/MLVisions/AISafety.git"
Documentation = "https://github.com/MLVisions/AISafety/blob/main/README.md"

[project.scripts]
build-website = "src.builders.site_builder:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-markdown>=3.9.0.20250906",
    "types-pyyaml>=6.0.12.20250915",
]
